# api.artiefuzzz.space

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  rust-toolchain.toml
.github/workflows/: release.yml
migrations/2022-10-11-091138_init_logins/: up.sql
src/: main.rs  models.rs  schema.rs
src/server/: mod.rs  rejections.rs  routes.rs
src/server/lib/: images.rs  mod.rs  postgres.rs  s3_client.rs  stopwatch.rs
src/server/lib/auth/: jwt.rs  user.rs
