[package]
name = "api"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rust-s3 = { version = "0.32.3", features = ["no-verify-ssl"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
warp = "0.3.3"
