[package]
name = "api"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
diesel = { version = "2.0.1", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
jsonwebtoken = { version = "8.1.1", default-features = false }
lazy_static = "1.4.0"
rand = "0.8.5"
rust-s3 = { version = "0.32.3", features = ["no-verify-ssl"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
warp = "0.3.3"
